editor-components/banner/banner6/banner6.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
    background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
    padding: calc(var(--composer-gap-xl) * 3) var(--composer-gap-xl) !important;
    position: relative;
    overflow: hidden;
    .vector1 {
        position: absolute;
        top: 0px;
        left: 600px;
        object-fit: cover;
        max-height: 200px; 
        max-width: 50%;       
    }
    .vector2 {
        position: absolute;
        right: 200px;
        max-height: 200px; 
        max-width: 50%;
        object-fit: cover;
    }
    .max-content {
        .section {
            .title {
                max-width: 70%;
                max-height: 80%;
                overflow: hidden;
                display: -webkit-box;
                -webkit-box-orient: vertical;
                -webkit-line-clamp: 5;
                text-overflow: ellipsis;
            }
            .description {
                opacity: 0.7;
                max-width: 70%;
                max-height: 80%;
                overflow: hidden;
                display: -webkit-box;
                -webkit-box-orient: vertical;
                -webkit-line-clamp: 5;
                text-overflow: ellipsis;
            }
            .breadcrumb {
                display: flex;
                align-items: center;
                max-width: 100%;

                .home,.current{
                    overflow: hidden;
                    display: -webkit-box;
                    -webkit-box-orient: vertical;
                    -webkit-line-clamp: 5;
                    text-overflow: ellipsis;
                }

                .home {
                    color: var(--composer-font-color-primary);
                    margin-right: var(--composer-gap-sm);
                    min-width: fit-content;
                    &:hover {
                        transition: color 0.3 ease;
                        color: var(--composer-primary-color);
                    }
                }
                .icon {
                    color: var(--composer-font-color-primary);
                    margin-right: var(--composer-gap-sm);
                    min-width: 1rem;
                }
                .current {
                    min-width: fit-content;
                    color: var(--composer-primary-color);
                }
            }

            &.with-image {
                .title, .description, .home, .icon {
                    color: black;
                }
            }
        }
    }
}

@container (max-width : #{$composer-tablet-width}) {
    .container {
        .vector1 {
            left: 300px !important;
        }
        .vector2 {
            right: 100px;
        }
    }
}

@container (max-width : #{$composer-phone-width}) { 
    .container {
        .vector1, .vector2 {
            display: none;
        }
        .section {
            .title, .description {
                max-width: 100% !important;
            }
        }
    }
}

